--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,67 @@
-/* app css stylesheet */
+/*
+ * Trailblazers CSS
+ */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+/* Override Bootstrap stuff */
+* {
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
 }
 
-.menu:before {
-  content: "[";
+.tblaze-header {
+  text-align: center;
+  background-color: #54BA56;
+  color: #fff;
 }
 
-.menu:after {
-  content: "]";
+.tblaze-header h2 {
+  font-size: 1em;
+  margin: 0;
+  padding: 0.25em 0.5em;
 }
 
-.menu > li {
-  display: inline;
+.tblaze-trail-content {
+  padding: 0 1em;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.tblaze-trail-image {
+  margin: 0 -1em;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
+.tblaze-trail-image img {
+  width: 100%;
+}
+
+.tblaze-trail-action {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.tblaze-feedback-rating {
+  text-align: center;
+}
+
+.tblaze-feedback-rating li {
+  font-size: 2.5em;
   padding: 0;
+  margin: 0;
+}
+
+.tblaze-feedback-comments textarea {
+  resize: vertical;
+}
+
+.tblaze-trail-action-fixed-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-bottom: 0;
+}
+
+.tblaze-trail-action-fixed-bottom button {
+  padding-top: 0.65em;
+  padding-bottom: 0.65em;
+  font-size: 1.3em;
 }
