--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,11 @@
  * Trailblazers CSS
  */
 
+/* Basic stuff */
+html, body {
+  overflow-x: hidden;
+}
+
 /* Override Bootstrap stuff */
 * {
   -webkit-border-radius: 0 !important;
@@ -31,6 +36,16 @@
 
 .tblaze-trail-image img {
   width: 100%;
+}
+
+.tblaze-trail-header p {
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+
+.tblaze-trail-header p + h1 {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .tblaze-trail-action {
@@ -65,3 +80,31 @@
   padding-bottom: 0.65em;
   font-size: 1.3em;
 }
+
+.tblaze-trail-stats-length {
+  display: block;
+  font-size: 2em;
+  line-height: 1.25em;
+}
+
+.tblaze-trail-weather-temp {
+  display: block;
+  font-size: 2em;
+  line-height: 1.25em;
+}
+
+.tblaze-finger-button {
+  text-align: center;
+}
+
+.tblaze-finger-button button {
+  padding: 1.5em 1em;
+  border-radius: 50% !important;
+  margin-top: 10px;
+}
+
+.tblaze-finger-button button img {
+  width: 40px;
+  height: 30px;
+}
+
