--- a/app/app.css
+++ b/app/app.css
@@ -44,7 +44,7 @@ html, body {
 }
 
 .tblaze-trail-header p + h1 {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 20px;
 }
 
@@ -108,3 +108,18 @@ html, body {
   height: 30px;
 }
 
+.tblaze-trail-tips {
+  margin-left: -1em;
+  margin-right: -1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-bottom: 1px solid #999;
+  -webkit-box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.75);
+  -moz-box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.75);
+  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.75);
+}
+
+.tblaze-trail-tips h3 {
+  margin-top: 0;
+  padding-top: 20px;
+}
