--- a/app/app.css
+++ b/app/app.css
@@ -103,12 +103,12 @@ html, body {
 .tblaze-finger-button button {
   padding: 1.5em 1em;
   border-radius: 50% !important;
-    box-shadow: 0 3px #EACB39;
+  box-shadow: 0 1px #EACB39;
 }
 
 .tblaze-finger-button button img {
   width: 40px;
-  height: 30px;
+  height: 36px;
 }
 
 .tblaze-trail-tips {
@@ -126,6 +126,10 @@ html, body {
 .tblaze-trail-tips h3 {
   margin-top: 0;
   padding-top: 20px;
+}
+
+.tblaze-trail-activity-question {
+  margin-top: 50px;
 }
 
 .tblaze-trail-started {
