--- a/app/app.css
+++ b/app/app.css
@@ -74,8 +74,7 @@ input, textarea {
   bottom: 0;
   left: 0;
   right: 0;
-  padding-bottom: 0;
-
+  padding: 1em;
 }
 
 .tblaze-trail-action-fixed-bottom button {
