--- a/app/app.css
+++ b/app/app.css
@@ -45,6 +45,10 @@ input, textarea {
   margin-top: 10px;
 }
 
+.tblaze-trail-header h1 {
+  line-height: 1em;
+}
+
 .tblaze-trail-header p + h1 {
   margin-top: 0;
   margin-bottom: 20px;
